// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionHashView.vue [type: account, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="From"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="cnToWyQbAUWy...yLGKFBTRYbz8"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy From"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <!---->
</div>
`;

exports[`TransactionHashView.vue [type: account, env: Dev]: should be rendered correctly 2`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="To"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="cnToWyQbAUWy...yLGKFBTRYbz8"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy To"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <!---->
</div>
`;

exports[`TransactionHashView.vue [type: account, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="From"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="cnToWyQbAUWy...yLGKFBTRYbz8"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy with-dropdown"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy From"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    popperclass=""
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://sora.subscan.io/account/cnToWyQbAUWygF6utv6vSqFfi6VKayKsvXEkbyLGKFBTRYbz8"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
            View in Subscan
          
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: account, env: Prod]: should be rendered correctly 2`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="To"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="cnToWyQbAUWy...yLGKFBTRYbz8"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy with-dropdown"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy To"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    popperclass=""
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://sora.subscan.io/account/cnToWyQbAUWygF6utv6vSqFfi6VKayKsvXEkbyLGKFBTRYbz8"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
            View in Subscan
          
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: block, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="Block Id"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy Block Id"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <!---->
</div>
`;

exports[`TransactionHashView.vue [type: block, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="Block Id"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy with-dropdown"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy Block Id"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    popperclass=""
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://sora.subscan.io/block/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
            View in Subscan
          
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: ethAccount, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="To"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="0x6F984C337a...42cef462e3ff"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy with-dropdown"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy To"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    popperclass=""
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <s-dropdown-item-stub
        class="s-dropdown-menu__item"
      >
        <span>
          View in Etherscan
        </span>
      </s-dropdown-item-stub>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: ethAccount, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="To"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="0x6F984C337a...42cef462e3ff"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy with-dropdown"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy To"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    popperclass=""
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <s-dropdown-item-stub
        class="s-dropdown-menu__item"
      >
        <span>
          View in Etherscan
        </span>
      </s-dropdown-item-stub>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: ethTransaction, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="Transaction Id"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="0x07f7ec4c5f...87b8674b2e80"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy with-dropdown"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy Transaction Id"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    popperclass=""
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <s-dropdown-item-stub
        class="s-dropdown-menu__item"
      >
        <span>
          View in Etherscan
        </span>
      </s-dropdown-item-stub>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: ethTransaction, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="Transaction Id"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="0x07f7ec4c5f...87b8674b2e80"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy with-dropdown"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy Transaction Id"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    popperclass=""
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <s-dropdown-item-stub
        class="s-dropdown-menu__item"
      >
        <span>
          View in Etherscan
        </span>
      </s-dropdown-item-stub>
    </template>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue [type: id, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="Transaction Id"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy Transaction Id"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <!---->
</div>
`;

exports[`TransactionHashView.vue [type: id, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    form=""
    label=""
    name=""
    placeholder="Transaction Id"
    prefix=""
    readonly="true"
    rows="2"
    size="big"
    suffix=""
    tabindex="-1"
    type="text"
    usedesignsystem="true"
    value="0xB8c77482e4...52C74426C6D7"
  />
   
  <s-button-stub
    alternative="true"
    borderradius="small"
    class="s-button--copy with-dropdown"
    icon="basic-copy-24"
    iconposition="left"
    nativetype="button"
    size="medium"
    tabindex="0"
    tooltip="Copy Transaction Id"
    tooltipplacement="top"
    type="action"
    usedesignsystem="true"
  />
   
  <s-dropdown-stub
    borderradius="mini"
    buttontype="secondary"
    class="s-dropdown-menu"
    hideonclick="true"
    hidetimeout="150"
    icon="basic-more-vertical-24"
    placement="bottom-end"
    popperclass=""
    showtimeout="250"
    size="medium"
    tabindex="0"
    trigger="hover"
    type="ellipsis"
  >
    <template>
      <a
        class="transaction-link"
        href="https://sora.subscan.io/extrinsic/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
        rel="nofollow noopener"
        target="_blank"
      >
        <s-dropdown-item-stub
          class="s-dropdown-menu__item"
        >
          
            View in Subscan
          
        </s-dropdown-item-stub>
      </a>
    </template>
  </s-dropdown-stub>
</div>
`;
